--- a/css/estilo.css
+++ b/css/estilo.css
@@ -74,7 +74,7 @@ footer div ul li{
 a{
     text-decoration: none;
     color: white;
-}
+    }
 li a:hover{
     color: red;
 }
@@ -117,6 +117,8 @@ p{
     background-repeat: no-repeat;}
 .titulo{
     font-weight: bold;
+  
+
 }
 .locales{
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -147,11 +149,14 @@ p{
 .logo1{
     width: 90%;
     height: 90%;
+    animation: rotar 4s infinite linear;
 }
+
 .logo2{
     width: 90%;
     height: 90%;
-}
+    animation: rotar 4s infinite linear;
+}   
 .local{
     width: 50%;
     height: 300px;
@@ -241,7 +246,13 @@ p{
     width: 20%;
     min-width: 250px;
     padding: 0%;
-    margin: 0%;}
+    margin: 0%;
+       
+}
+.tarjetapizza a:hover{
+    transform: scale(2,2);
+}
+
 .img{
     width: 100%;
     height: 100%;
@@ -278,7 +289,8 @@ form{
         color: white;}
     .logo1{
             width: 100%;
-            height: 90%;}
+            height: 90%;
+            animation: rotar 4s infinite linear;}
     .logo2{
            display: none;}
     header nav ul li{
@@ -324,4 +336,12 @@ form{
     background-image:linear-gradient(red,black);}
    
 
+}
+@keyframes rotar{
+    from {
+        transform: rotatey(0deg);
+      }
+      to {
+        transform: rotatey(359deg);
+      }
 }
