--- a/css/estilo.css
+++ b/css/estilo.css
@@ -246,7 +246,7 @@ p{
     width: 20%;
     min-width: 250px;
     padding: 0%;
-    margin: 0%;
+    margin: 4px;
        
 }
 .tarjetapizza a:hover{
@@ -334,7 +334,8 @@ form{
     .mainpe{
     grid-area: mainpe;
     background-image:linear-gradient(red,black);}
-   
+         
+      
 
 }
 @keyframes rotar{
